fixed friend list visibility status
fixed visibility of status green/red dot

--- a/src/components/statistics/statistics.module.css
+++ b/src/components/statistics/statistics.module.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     border: solid 1px lightcoral;
+    box-shadow: 14px 14px 20px 3px rgba(70, 78, 158, 1);
  }
 
  .label {
